"add components create-post, create-subreddit, list-subreddits"

--- a/src/app/shared/post-tile/post-tile.component.html
+++ b/src/app/shared/post-tile/post-tile.component.html
@@ -13,6 +13,7 @@
       <a class="postname" href="{{post.url}}">{{post.postName}}</a>
     </div>
     <div>
+<!--      что бы отабразить html-->
       <p class="post-text" [innerHtml]="post.description"></p>
     </div>
     <hr/>
