--- a/src/app/post/create-post/create-post.component.html
+++ b/src/app/post/create-post/create-post.component.html
@@ -1,22 +1,23 @@
 <div class="container">
-  <div class="row">
-    <hr/>
-    <div class="create-post-container col-md-9">
-      <form class="post-form" [formGroup]="createPostForm" (ngSubmit)="createPost()">
-        <div class="form-group">
-          <div class="create-post-heading">Create Post</div>
-          <hr/>
-          <input type="text" [formControlName]="'postName'" class="form-control" style="margin-top: 5px"
-                 placeholder="Title">
+    <div class="row">
+        <hr/>
+        <div class="create-post-container col-md-9">
+            <form class="post-form" [formGroup]="createPostForm" (ngSubmit)="createPost()">
+                <div class="form-group">
+                    <div class="create-post-heading">Create Post</div>
+                    <hr/>
+                    <input type="text" [formControlName]="'postName'" class="form-control" style="margin-top: 5px"
+                           placeholder="Title">
 
-          <input type="text" class="form-control" [formControlName]="'url'" style="margin-top: 5px" placeholder="URL">
+                    <input type="text" class="form-control" [formControlName]="'url'" style="margin-top: 5px"
+                           placeholder="URL">
 
-          <select class="form-control" style="margin-top: 10px" [formControlName]="'subredditName'">
-            <option value="" selected disabled>Select Subreddit</option>
-            <option *ngFor="let subreddit of subreddits">{{subreddit.name}}</option>
-          </select>
+                    <select class="form-control" style="margin-top: 10px" [formControlName]="'subredditName'">
+                        <option value="" selected disabled>Select Subreddit</option>
+                        <option *ngFor="let subreddit of subreddits">{{subreddit.name}}</option>
+                    </select>
 
-          <editor [formControlName]="'description'" [init]="{
+                    <editor [formControlName]="'description'" [init]="{
                         height: 500,
                         menubar: false,
                         plugins: [
@@ -29,14 +30,14 @@
                            ' alignleft aligncenter alignright alignjustify |' +
                             ' bullist numlist outdent indent | removeformat | help'
                       }"></editor>
-          <span>
+                    <span>
               <div style="margin-top: 5px" class="float-right">
                 <button (click)="discardPost()" class="btnDiscard">Discard</button>
                 <button class="btnCreatePost">Post</button>
               </div>
             </span>
+                </div>
+            </form>
         </div>
-      </form>
     </div>
-  </div>
 </div>
