"add test 10 header component"

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,12 +17,21 @@
         </div>
         <div class="flex-grow-1 float-right">
             <div *ngIf="isLoggedIn" ngbDropdown class="float-right">
+
                 <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-                    <button (click)="goToUserProfile()" ngbDropdownItem>Profile</button>
-                    <button (click)="logout()" ngbDropdownItem>Logout</button>
+                    <button id="goToUserProfile" (click)="goToUserProfile()" ngbDropdownItem>Profile</button>
+                    <button id="logout" (click)="logout()" ngbDropdownItem>Logout</button>
                 </div>
+
                 <button class="userdetails" id="dropdownBasic1" ngbDropdownToggle>
-                    <img class="account-icon" src="https://www.redditstatic.com/avatars/avatar_default_08_D4E815.png">
+                    <!--                    <img class="account-icon" src="https://www.redditstatic.com/avatars/avatar_default_08_D4E815.png">-->
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor"
+                         class="bi bi-person-square" viewBox="0 0 20 20">
+                        <path fill-rule="evenodd"
+                              d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+                        <path fill-rule="evenodd"
+                              d="M2 15v-1c0-1 1-4 6-4s6 3 6 4v1H2zm6-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                    </svg>
                     {{username}}
                 </button>
             </div>
