"add test 11 create post component"

--- a/src/app/post/create-post/create-post.component.html
+++ b/src/app/post/create-post/create-post.component.html
@@ -2,7 +2,8 @@
     <div class="row">
         <hr/>
         <div class="create-post-container col-md-9">
-            <form class="post-form" [formGroup]="createPostForm" (ngSubmit)="createPost()">
+            <!--            (ngSubmit)="createPost()"-->
+            <form class="post-form" [formGroup]="createPostForm">
                 <div class="form-group">
                     <div class="create-post-heading">Create Post</div>
                     <hr/>
@@ -17,25 +18,26 @@
                         <option *ngFor="let subreddit of subreddits">{{subreddit.name}}</option>
                     </select>
 
-                    <editor [formControlName]="'description'" [init]="{
-                        height: 500,
-                        menubar: false,
-                        plugins: [
-                          'advlist autolink lists link image charmap print preview anchor',
-                          'searchreplace visualblocks code fullscreen',
-                          'insertdatetime media table paste code help wordcount'
-                        ],
-                        toolbar:
-                          'undo redo | formatselect | bold italic backcolor |' +
-                           ' alignleft aligncenter alignright alignjustify |' +
-                            ' bullist numlist outdent indent | removeformat | help'
-                      }"></editor>
-                    <span>
-              <div style="margin-top: 5px" class="float-right">
-                <button (click)="discardPost()" class="btnDiscard">Discard</button>
-                <button class="btnCreatePost">Post</button>
-              </div>
-            </span>
+                    <editor [formControlName]="'description'"
+                            [init]="{
+                                            height: 500,
+                                            menubar: false,
+                                            plugins: [
+                                              'advlist autolink lists link image charmap print preview anchor',
+                                              'searchreplace visualblocks code fullscreen',
+                                              'insertdatetime media table paste code help wordcount'
+                                            ],
+                                            toolbar:
+                                              'undo redo | formatselect | bold italic backcolor |' +
+                                               ' alignleft aligncenter alignright alignjustify |' +
+                                                ' bullist numlist outdent indent | removeformat | help'
+                                          }"></editor>
+                    <div>
+                        <div style="margin-top: 5px" class="float-right">
+                            <button id="discardPost" (click)="discardPost()" class="btnDiscard">Discard</button>
+                            <button id="createPost" (click)="createPost()" class="btnCreatePost">Post</button>
+                        </div>
+                    </div>
                 </div>
             </form>
         </div>
