"add test 12 view post component, refactoring 1"

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -49,12 +49,13 @@
                             </div>
                         </div>
 
-                        <span class="col-md-6 offset-md-4">
-                            <button type="submit" class="sign-up">
-                                Sign Up
-                            </button>
-                            <span style="padding-left: 15px">Existing user? <a routerLink="/login">Log In</a></span>
-                        </span>
+                        <div class="col-md-6 offset-md-4">
+                            <div class="d-flex flex-column align-content-end justify-content-end align-items-end">
+                                <button type="submit" class="sign-up">Sign Up</button>
+                                <br/>
+                                <div>Existing user? <a routerLink="/login">Log In</a></div>
+                            </div>
+                        </div>
                     </form>
 
                 </div>
