--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -31,12 +31,13 @@
                             </div>
                         </div>
 
-                        <span class="col-md-6 offset-md-4">
-                            <button type="submit" class="login">
-                                Login
-                            </button>
-                            <span style="padding-left: 15px">New User? <a routerLink="/signup">SIGN UP</a></span>
-                        </span>
+                        <div class="col-md-6 offset-md-4">
+                            <div class="d-flex flex-column align-content-end justify-content-end align-items-end">
+                                <button type="submit" class="login">Log In</button>
+                                <br/>
+                                <div>New User? <a routerLink="/sign-up">Sign Up</a></div>
+                            </div>
+                        </div>
                         <div class="login-failed" *ngIf='this.isError'>
                             <p class="login-failed-text">Login Failed. Please check your credentials and try again.</p>
                         </div>
