--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -36,8 +36,8 @@
                 </button>
             </div>
             <div *ngIf="!isLoggedIn">
-                <a routerLink="/sign-up" class="float-right sign-up mr-2">Sign up</a>
-                <a routerLink="/login" class="float-right login mr-2">Login</a>
+                <a routerLink="/sign-up" class="float-right sign-up mr-2">SIGN UP</a>
+                <a routerLink="/login" class="float-right login mr-2">LOG IN</a>
             </div>
         </div>
     </nav>
