--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -37,7 +37,7 @@
             </div>
             <div *ngIf="!isLoggedIn">
                 <a routerLink="/sign-up" class="float-right sign-up mr-2">SIGN UP</a>
-                <a routerLink="/login" class="float-right login mr-2">LOG IN</a>
+                <a routerLink="/login" class="float-right loginButton mr-2">LOG IN</a>
             </div>
         </div>
     </nav>
