--- a/src/app/post/view-post/view-post.component.html
+++ b/src/app/post/view-post/view-post.component.html
@@ -29,7 +29,7 @@
 
                             <button
                                     type="submit"
-                                    class="login float-right"
+                                    class="loginButton float-right"
                             >Comment
                             </button>
 
