--- a/src/app/shared/post-tile/post-tile.component.html
+++ b/src/app/shared/post-tile/post-tile.component.html
@@ -22,7 +22,7 @@
         <fa-icon [icon]="faComments"></fa-icon>
         Comments({{post.commentCount}})
       </a>
-      <button class="login" (click)="goToPost(post.id)">
+      <button class="loginButton" (click)="goToPost(post.id)">
         Read Post
       </button>
     </span>
