--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -7,10 +7,8 @@
                     <h4>Register</h4>
                 </div>
 
-
                 <div class="card-body">
-
-                    <form [formGroup]="signupForm" (ngSubmit)="signup()">
+                    <form [formGroup]="signupForm" (ngSubmit)="signUp()">
                         <div class="form-group row">
                             <label for="email_address" class="col-md-4 col-form-label text-md-right">E-Mail
                                 Address</label>
