--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -8,7 +8,7 @@
                 </div>
 
                 <div class="card-body">
-                    <form [formGroup]="signupForm" (ngSubmit)="signUp()">
+                    <form [formGroup]="signUpForm">
                         <div class="form-group row">
                             <label for="email_address" class="col-md-4 col-form-label text-md-right">E-Mail
                                 Address</label>
@@ -17,8 +17,7 @@
                                        name="email-address" required
                                        autofocus>
 
-                                <!--                //проверка на валидность -->
-                                <span *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched">
+                                <span *ngIf="!signUpForm.get('email').valid && signUpForm.get('email').touched">
                                     Please provide a valid email
                                 </span>
                             </div>
@@ -29,7 +28,7 @@
                             <div class="col-md-6">
                                 <input type="text" [formControlName]="'username'" class="form-control" required
                                        autofocus>
-                                <span *ngIf="!signupForm.get('username').valid && signupForm.get('username').touched">
+                                <span *ngIf="!signUpForm.get('username').valid && signUpForm.get('username').touched">
                                     Please provide a valid username
                                 </span>
                             </div>
@@ -41,7 +40,7 @@
                                 <input type="password" [formControlName]="'password'" id="password" class="form-control"
                                        name="password"
                                        required>
-                                <span *ngIf="!signupForm.get('password').valid && signupForm.get('password').touched">
+                                <span *ngIf="!signUpForm.get('password').valid && signUpForm.get('password').touched">
                                     Please provide a valid Password
                                 </span>
                             </div>
@@ -49,7 +48,7 @@
 
                         <div class="col-md-6 offset-md-4">
                             <div class="d-flex flex-column align-content-end justify-content-end align-items-end">
-                                <button type="submit" class="sign-up">Sign Up</button>
+                                <button type="submit" (click)="signUp()" class="sign-up">Sign Up</button>
                                 <br/>
                                 <div>Existing user? <a routerLink="/login">Log In</a></div>
                             </div>
