--- a/src/app/post/create-post/create-post.component.html
+++ b/src/app/post/create-post/create-post.component.html
@@ -2,7 +2,6 @@
     <div class="row">
         <hr/>
         <div class="create-post-container col-md-9">
-            <!--            (ngSubmit)="createPost()"-->
             <form class="post-form" [formGroup]="createPostForm">
                 <div class="form-group">
                     <div class="create-post-heading">Create Post</div>
@@ -15,7 +14,7 @@
 
                     <select class="form-control" style="margin-top: 10px" [formControlName]="'subredditName'">
                         <option value="" selected disabled>Select Subreddit</option>
-                        <option *ngFor="let subreddit of subreddits">{{subreddit.name}}</option>
+                        <option *ngFor="let subreddit of subRead">{{subreddit.name}}</option>
                     </select>
 
                     <editor [formControlName]="'description'"
