--- a/src/app/post/view-post/view-post.component.html
+++ b/src/app/post/view-post/view-post.component.html
@@ -8,7 +8,7 @@
                 </div>
                 <div class="col-md-11">
           <span>
-            <span class="subreddit-text"><a class="post-url" href="">{{post.subredditName}}</a></span>
+            <span class="subreddit-text"><a class="post-url" href="">{{post.subReadName}}</a></span>
             <span> . Posted
               <span> {{post.duration}} </span>
               by
