--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -7,12 +7,12 @@
                 <div class="card-body">
                     <form [formGroup]="loginForm">
                         <div class="form-group row">
-                            <label for="user_name" class="col-md-4 col-form-label text-md-right">Username</label>
+                            <label class="col-md-4 col-form-label text-md-right" for="user_name">Username</label>
                             <div class="col-md-6">
-                                <input type="text" id="user_name" class="form-control" [formControlName]="'username'"
+                                <input [formControlName]="'username'" autofocus class="form-control" id="user_name"
                                        name="user_name"
                                        required
-                                       autofocus>
+                                       type="text">
                                 <span *ngIf="!loginForm.get('username').valid && loginForm.get('username').touched">
                                    Please provide a valid username
                                 </span>
@@ -20,11 +20,11 @@
                         </div>
 
                         <div class="form-group row">
-                            <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
+                            <label class="col-md-4 col-form-label text-md-right" for="password">Password</label>
                             <div class="col-md-6">
-                                <input type="password" id="password" class="form-control" [formControlName]="'password'"
-                                       name="password"
-                                       required>
+                                <input [formControlName]="'password'" class="form-control" id="password" name="password"
+                                       required
+                                       type="password">
                                 <span *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched">
                                   Password cannot be empty
                                 </span>
@@ -33,16 +33,16 @@
 
                         <div class="col-md-6 offset-md-4">
                             <div class="d-flex flex-column align-content-end justify-content-end align-items-end">
-                                <button type="submit" (click)="login()" class="loginButton">Log In</button>
+                                <button (click)="login()" class="loginButton" type="submit">Log In</button>
                                 <br/>
                                 <div>New User? <a routerLink="/sign-up">Sign Up</a></div>
                             </div>
                         </div>
-                        <div class="login-failed" *ngIf='this.isError'>
+                        <div *ngIf='this.isError' class="login-failed">
                             <p class="login-failed-text">Login Failed. Please check your credentials and try again.</p>
                         </div>
-                        <div class="login-failed" [ngStyle]="{'background-color': 'green'}"
-                             *ngIf="this.registerSuccessMessage && this.registerSuccessMessage.length > 0">
+                        <div *ngIf="this.registerSuccessMessage && this.registerSuccessMessage.length > 0" [ngStyle]="{'background-color': 'green'}"
+                             class="login-failed">
                             <p class="register-success-text">{{registerSuccessMessage}}</p>
                         </div>
                     </form>
