--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -10,12 +10,12 @@
                 <div class="card-body">
                     <form [formGroup]="signUpForm">
                         <div class="form-group row">
-                            <label for="email_address" class="col-md-4 col-form-label text-md-right">E-Mail
+                            <label class="col-md-4 col-form-label text-md-right" for="email_address">E-Mail
                                 Address</label>
                             <div class="col-md-6">
-                                <input type="text" [formControlName]="'email'" id="email_address" class="form-control"
+                                <input [formControlName]="'email'" autofocus class="form-control" id="email_address"
                                        name="email-address" required
-                                       autofocus>
+                                       type="text">
 
                                 <span *ngIf="!signUpForm.get('email').valid && signUpForm.get('email').touched">
                                     Please provide a valid email
@@ -26,8 +26,8 @@
                         <div class="form-group row">
                             <label class="col-md-4 col-form-label text-md-right">User Name</label>
                             <div class="col-md-6">
-                                <input type="text" [formControlName]="'username'" class="form-control" required
-                                       autofocus>
+                                <input [formControlName]="'username'" autofocus class="form-control" required
+                                       type="text">
                                 <span *ngIf="!signUpForm.get('username').valid && signUpForm.get('username').touched">
                                     Please provide a valid username
                                 </span>
@@ -35,11 +35,11 @@
                         </div>
 
                         <div class="form-group row">
-                            <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
+                            <label class="col-md-4 col-form-label text-md-right" for="password">Password</label>
                             <div class="col-md-6">
-                                <input type="password" [formControlName]="'password'" id="password" class="form-control"
-                                       name="password"
-                                       required>
+                                <input [formControlName]="'password'" class="form-control" id="password" name="password"
+                                       required
+                                       type="password">
                                 <span *ngIf="!signUpForm.get('password').valid && signUpForm.get('password').touched">
                                     Please provide a valid Password
                                 </span>
@@ -48,7 +48,7 @@
 
                         <div class="col-md-6 offset-md-4">
                             <div class="d-flex flex-column align-content-end justify-content-end align-items-end">
-                                <button type="submit" (click)="signUp()" class="sign-up">Sign Up</button>
+                                <button (click)="signUp()" class="sign-up" type="submit">Sign Up</button>
                                 <br/>
                                 <div>Existing user? <a routerLink="/login">Log In</a></div>
                             </div>
