--- a/src/app/post/create-post/create-post.component.html
+++ b/src/app/post/create-post/create-post.component.html
@@ -2,18 +2,18 @@
     <div class="row">
         <hr/>
         <div class="create-post-container col-md-9">
-            <form class="post-form" [formGroup]="createPostForm">
+            <form [formGroup]="createPostForm" class="post-form">
                 <div class="form-group">
                     <div class="create-post-heading">Create Post</div>
                     <hr/>
-                    <input type="text" [formControlName]="'postName'" class="form-control" style="margin-top: 5px"
-                           placeholder="Title">
+                    <input [formControlName]="'postName'" class="form-control" placeholder="Title" style="margin-top: 5px"
+                           type="text">
 
-                    <input type="text" class="form-control" [formControlName]="'url'" style="margin-top: 5px"
-                           placeholder="URL">
+                    <input [formControlName]="'url'" class="form-control" placeholder="URL" style="margin-top: 5px"
+                           type="text">
 
-                    <select class="form-control" style="margin-top: 10px" [formControlName]="'subredditName'">
-                        <option value="" selected disabled>Select Subreddit</option>
+                    <select [formControlName]="'subredditName'" class="form-control" style="margin-top: 10px">
+                        <option disabled selected value="">Select Subreddit</option>
                         <option *ngFor="let subreddit of subRead">{{subreddit.name}}</option>
                     </select>
 
@@ -32,9 +32,9 @@
                                                 ' bullist numlist outdent indent | removeformat | help'
                                           }"></editor>
                     <div>
-                        <div style="margin-top: 5px" class="float-right">
-                            <button id="discardPost" (click)="discardPost()" class="btnDiscard">Discard</button>
-                            <button id="createPost" (click)="createPost()" class="btnCreatePost">Post</button>
+                        <div class="float-right" style="margin-top: 5px">
+                            <button (click)="discardPost()" class="btnDiscard" id="discardPost">Discard</button>
+                            <button (click)="createPost()" class="btnCreatePost" id="createPost">Post</button>
                         </div>
                     </div>
                 </div>
