--- a/src/app/shared/post-tile/post-tile.component.html
+++ b/src/app/shared/post-tile/post-tile.component.html
@@ -1,5 +1,5 @@
 <!-- Display Posts-->
-<div class="row post" *ngFor="let post of posts">
+<div *ngFor="let post of posts" class="row post">
     <app-vote-button [post]="post"></app-vote-button>
     <!-- Section to Display Post Information-->
     <div class="col-md-11">
@@ -14,7 +14,7 @@
         </div>
         <div>
             <!--      что бы отабразить html-->
-            <p class="post-text" [innerHtml]="post.description"></p>
+            <p [innerHtml]="post.description" class="post-text"></p>
         </div>
         <hr/>
         <span>
@@ -22,7 +22,7 @@
         <fa-icon [icon]="faComments"></fa-icon>
         Comments({{post.commentCount}})
       </a>
-      <button class="loginButton" (click)="goToPost(post.id)">
+      <button (click)="goToPost(post.id)" class="loginButton">
         Read Post
       </button>
     </span>
