--- a/src/app/shared/subreddit-side-bar/subreddit-side-bar.component.html
+++ b/src/app/shared/subreddit-side-bar/subreddit-side-bar.component.html
@@ -5,7 +5,7 @@
         <span class="subreddit-text"><a href="/view-subreddit/{{subreddit.id}}">{{subreddit.name}}</a></span>
         <hr/>
     </span>
-    <div style="text-align: center" *ngIf="displayViewAll">
-        <a style="font-weight: bold" routerLink="/list-subreddits">View All</a>
+    <div *ngIf="displayViewAll" style="text-align: center">
+        <a routerLink="/list-subreddits" style="font-weight: bold">View All</a>
     </div>
 </div>
