--- a/src/app/subreddit/create-subreddit/create-subreddit.component.html
+++ b/src/app/subreddit/create-subreddit/create-subreddit.component.html
@@ -1,16 +1,16 @@
 <div class="container">
     <div class="row">
         <div class="create-subreddit-container">
-            <form class="post-form" [formGroup]="createSubredditForm" (ngSubmit)="createSubreddit()">
+            <form (ngSubmit)="createSubreddit()" [formGroup]="createSubredditForm" class="post-form">
                 <div class="form-group">
                     <div class="create-subreddit-heading">Create Subreddit</div>
                     <hr/>
-                    <input type="text" [formControlName]="'title'" class="form-control" style="margin-top: 5px"
-                           placeholder="Title">
-                    <textarea type="text" [formControlName]="'description'" style="width: 100%; margin-top: 5px"
-                              placeholder="Description"></textarea>
+                    <input [formControlName]="'title'" class="form-control" placeholder="Title" style="margin-top: 5px"
+                           type="text">
+                    <textarea [formControlName]="'description'" placeholder="Description" style="width: 100%; margin-top: 5px"
+                              type="text"></textarea>
                     <div>
-                        <div style="margin-top: 5px" class="float-right">
+                        <div class="float-right" style="margin-top: 5px">
                             <button (click)="discard()" class="btnDiscard">Discard</button>
                             <button class="btnCreateSubreddit">Create</button>
                         </div>
