--- a/src/app/post/create-post/create-post.component.html
+++ b/src/app/post/create-post/create-post.component.html
@@ -6,7 +6,8 @@
                 <div class="form-group">
                     <div class="create-post-heading">Create Post</div>
                     <hr/>
-                    <input [formControlName]="'postName'" class="form-control" placeholder="Title" style="margin-top: 5px"
+                    <input [formControlName]="'postName'" class="form-control" placeholder="Title"
+                           style="margin-top: 5px"
                            type="text">
 
                     <input [formControlName]="'url'" class="form-control" placeholder="URL" style="margin-top: 5px"
