--- a/src/app/shared/side-bar/side-bar.component.html
+++ b/src/app/shared/side-bar/side-bar.component.html
@@ -7,6 +7,6 @@
         <button (click)="goToCreatePost()" class="btnCreatePost">Create Post</button>
     </div>
     <div style="text-align: center">
-        <button (click)="goToCreateSubreddit()" class="btnCreateSubreddit">Create Subreddit</button>
+        <button (click)="goToCreateSubRead()" class="btnCreateSubreddit">Create SubRead</button>
     </div>
 </div>
