--- a/src/app/auth/user-profile/user-profile.component.html
+++ b/src/app/auth/user-profile/user-profile.component.html
@@ -1,13 +1,13 @@
-<div class="container">
-    <div>
+<div class="container pt-5">
+    <div  class="pt-3 ">
         Welcome <b>{{name}}</b>.<br/> You have posted <b>{{postLength}}</b> time(s) and commented
         <b>{{commentLength}}</b> time(s).
         You can check your post and comment history below.
     </div>
     <hr/>
-    <div>
+    <h5>
         Your Posts:
-    </div>
+    </h5>
     <app-post-tile [posts]="posts"></app-post-tile>
     <hr/>
     <div>
