--- a/src/styles.css
+++ b/src/styles.css
@@ -34,3 +34,31 @@ input.ng-invalid.ng-touched {
     padding: 3px 16px;
     opacity: 1;
 }
+
+
+.loader-small {
+    border: 5px solid #f3f3f3;
+    -webkit-animation: spin 1s linear infinite;
+    animation: spin 1s linear infinite;
+    border-top: 5px solid #0079D3;
+    border-bottom: 5px solid #b3c1cb;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+}
+
+.loader {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #0079D3;
+    border-bottom: 16px solid #0079D3;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
