--- a/src/js/app/page/post/create-post/create-post.component.html
+++ b/src/js/app/page/post/create-post/create-post.component.html
@@ -6,40 +6,23 @@
                 <div class="form-group">
                     <div class="create-post-heading">Create Post</div>
                     <hr/>
-                    <input [formControlName]="'postName'" class="form-control" placeholder="Title"
-                           style="margin-top: 5px"
-                           type="text">
+                    <input [formControlName]="'postName'" class="form-control mt-2" placeholder="Title"        type="text">
 
-                    <input [formControlName]="'url'" class="form-control" placeholder="URL" style="margin-top: 5px"
-                           type="text">
+                    <input [formControlName]="'url'" class="form-control mt-2" placeholder="URL" type="text">
 
-                    <select [formControlName]="'subredditName'" class="form-control" style="margin-top: 10px">
-                        <option disabled selected value="">Select Subreddit</option>
+                    <select [formControlName]="'subredditName'" name="sub" class="form-control mt-2" >
                         <option *ngFor="let subreddit of subRead">{{subreddit.name}}</option>
                     </select>
 
-                    <editor [formControlName]="'description'"
-                            [init]="{
-                                            height: 500,
-                                            menubar: false,
-                                            plugins: [
-                                              'advlist autolink lists link image charmap print preview anchor',
-                                              'searchreplace visualblocks code fullscreen',
-                                              'insertdatetime media table paste code help wordcount'
-                                            ],
-                                            toolbar:
-                                              'undo redo | formatselect | bold italic backcolor |' +
-                                               ' alignleft aligncenter alignright alignjustify |' +
-                                                ' bullist numlist outdent indent | removeformat | help'
-                                          }"></editor>
-
-
-
+                    <div class="form-control h-auto mt-4" >
+                        <label>Текст поста </label>
+                        <quill-editor [styles]="{height: '100px'}" [formControlName]="'description'"></quill-editor>
+                    </div>
 
                     <div>
-                        <div class="float-right" style="margin-top: 5px">
+                        <div class="d-flex justify-content-around" style="margin-top: 5px;">
                             <button (click)="discardPost()" class="btnDiscard" id="discardPost">Discard</button>
-                            <button (click)="createPost()" class="btnCreatePost" id="createPost">Post</button>
+                            <button (click)="createPost()" class="btnCreatePost" id="createPost">Create</button>
                         </div>
                     </div>
                 </div>
