--- a/src/js/styles.css
+++ b/src/js/styles.css
@@ -1,3 +1,9 @@
+
+@import '~quill/dist/quill.core.css';
+@import '~quill/dist/quill.bubble.css';
+@import '~quill/dist/quill.snow.css';
+
+
 /* You can add global styles to this file, and also import other style files */
 html {
 
@@ -60,4 +66,14 @@ input.ng-invalid.ng-touched {
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+
+
+.b-color1{
+    background-color: #0079D3;
+}
+
+.b-color2{
+    background-color:  #f5832c;
 }
