--- a/src/js/app/component/shared/side-bar/side-bar.component.html
+++ b/src/js/app/component/shared/side-bar/side-bar.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar">
+<div class="sidebar d-flex flex-column justify-content-around">
     <div style="text-align: center; font-size: 1em">
         Welcome to Read home page. Come here to
         check in with your favorite sub.
