--- a/src/js/app/component/shared/post-tile/post-tile.component.html
+++ b/src/js/app/component/shared/post-tile/post-tile.component.html
@@ -1,27 +1,24 @@
 <div *ngFor="let post of posts" class="row post">
-    <app-vote-button [post]="post"></app-vote-button>
+    <!--    <app-vote-button [post]="post"></app-vote-button>-->
     <div class="col-md-11">
-    <span class="subreddit-info">
-      <span class="subreddit-text"><a class="posturl" routerLink="">{{post.subReadName}}</a></span>
-      <span> . Posted by <a class="username" routerLink="/user/{{post.userName}}">{{post.userName}}</a></span>
-      <span> . {{post.duration}}</span>
-    </span>
-        <hr/>
-        <div class="post-title">
-            <a class="postname" href="{{post.url}}">{{post.postName}}</a>
+        <div class="d-flex justify-content-between">
+            <div class="subreddit-text"><a class="post-url" routerLink="">sub: {{post.subReadName}}-------</a></div>
+            <div>Posted by <a class="username" routerLink="/user/{{post.userName}}">nik: {{post.userName}}</a></div>
+            <div>{{post.duration | date:'H:m yyyy.MMM.d'}}</div>
         </div>
+        <hr/>
         <div>
-            <p [innerHtml]="post.description" class="post-text"></p>
+            <p [innerHtml]="post.postName" class="post-text"></p>
         </div>
         <hr/>
-        <span>
-      <a class="btnCommments" role="button">
-        <fa-icon [icon]="faComments"></fa-icon>
-        Comments({{post.commentCount}})
-      </a>
-      <button (click)="goToPost(post.id)" class="loginButton">
-        Read Post
-      </button>
-    </span>
+        <div class="d-flex justify-content-between">
+            <a class="btnCommments" role="button">
+                <fa-icon [icon]="faComments"></fa-icon>
+                Comments {{post.commentCount}}
+            </a>
+            <button (click)="goToPost(post.id)" class="loginButton">
+                Read post
+            </button>
+        </div>
     </div>
 </div>
