--- a/src/js/app/page/auth/login/login.component.html
+++ b/src/js/app/page/auth/login/login.component.html
@@ -33,9 +33,9 @@
 
                         <div class="col-md-6 offset-md-4">
                             <div class="d-flex flex-column align-content-end justify-content-end align-items-end">
-                                <button (click)="login()" class="loginButton" type="submit">Log in</button>
+                                <button (click)="login()" class="loginButton" type="submit"  [disabled]="loginForm.invalid">Log in</button>
                                 <br/>
-                                <div>New User? <a routerLink="/sign-up">Sign up</a></div>
+                                <div>New user? <a routerLink="/sign-up">Sign up</a></div>
                             </div>
                         </div>
                         <div *ngIf='this.isError' class="login-failed">
