--- a/src/js/app/component/shared/post-tile/post-tile.component.css
+++ b/src/js/app/component/shared/post-tile/post-tile.component.css
@@ -38,4 +38,9 @@
 
 .post-text {
     margin-top: 10px;
+    text-decoration: none;
+    font-size: 24px;
+}
+.post-text:hover {
+    cursor:default;
 }
