--- a/src/js/app/component/shared/vote-button/vote-button.component.html
+++ b/src/js/app/component/shared/vote-button/vote-button.component.html
@@ -1,14 +1,17 @@
 <div class="col-md-1">
     <div class="d-flex flex-column votebox">
         <div class="p-2">
-            <fa-icon (click)="upVotePost()" [icon]="faArrowUp" [style.color]="post.upVote ? 'green':''" class="upvote">
+            <fa-icon (click)="upVotePost()"
+                     [icon]="faArrowUp"
+                     [style.color]="post.vote == up ? 'green':'' "
+                     class="upvote">
             </fa-icon>
         </div>
         <div class="p-2 votecount">{{post.voteCount}}</div>
         <div class="p-2">
             <fa-icon (click)="downVotePost()"
                      [icon]="faArrowDown"
-                     [style.color]="post.downVote ? 'red':''"
+                     [style.color]="post.vote == down  ? 'red':''"
                      class="downvote">
             </fa-icon>
         </div>
