add post-top, user-view-post

--- a/src/js/app/component/shared/side-bar/side-bar.component.html
+++ b/src/js/app/component/shared/side-bar/side-bar.component.html
@@ -7,6 +7,6 @@
         <button (click)="goToCreatePost()" class="btnCreatePost">Create post</button>
     </div>
     <div style="text-align: center">
-        <button (click)="goToCreateSubRead()" class="btnCreateSubreddit">Create sub read</button>
+        <button (click)="goToCreateSubRead()" class="btnCreateSubreddit">Create sub</button>
     </div>
 </div>
