--- a/src/js/app/component/shared/subreddit-side-bar/subreddit-side-bar.component.html
+++ b/src/js/app/component/shared/subreddit-side-bar/subreddit-side-bar.component.html
@@ -8,6 +8,6 @@
         <hr/>
     </span>
     <div *ngIf="displayViewAll" style="text-align: center">
-        <a routerLink="/list-subreddits" style="font-weight: bold">View All</a>
+        <a routerLink="/list-subreddits" style="font-weight: bold">View all</a>
     </div>
 </div>
