--- a/src/js/app/component/shared/post-tile/post-tile.component.html
+++ b/src/js/app/component/shared/post-tile/post-tile.component.html
@@ -1,26 +1,21 @@
-<div *ngFor="let post of posts" class=" post">
-    <div class="row p-1">
-        <app-vote-button [post]="post"></app-vote-button>
-        <div class="col">
-            <div class="d-flex justify-content-between">
-                <div class="subreddit-text"><a class="post-url" routerLink="">sub: {{post.subReadName}}</a></div>
-                <div>Posted by <a class="username" routerLink="/user/{{post.userName}}">nik: {{post.userName}}</a></div>
-                <div>{{post.duration | date:'H:m yyyy.MMM.d'}}</div>
-            </div>
-            <hr/>
-            <div>
-                <a (click)="goToPost(post.id)" class="post-text">{{post.postName}}</a>
-            </div>
-            <hr/>
-            <div class="d-flex justify-content-between">
-                <a class="btnCommments" role="button">
-                    <fa-icon [icon]="faComments"></fa-icon>
-                    Comments {{post.commentCount}}
-                </a>
-                <button (click)="goToPost(post.id)" class="loginButton">
-                    Read post
-                </button>
-            </div>
+<div class="row p-1 post">
+    <app-vote-button [post]="post"></app-vote-button>
+    <div class="col">
+        <app-post-top [post]="post" ></app-post-top>
+        <hr/>
+        <div style="max-width: 35vw; max-height: 10vh; overflow: hidden;">
+            <a (click)="goToPost(post.id)" class="post-text">{{post.postName}}</a>
+        </div>
+
+        <hr/>
+        <div class="d-flex justify-content-between">
+            <a class="btnCommments" role="button" routerLink="/view-post/{{post.id}}">
+                <fa-icon [icon]="faComments"></fa-icon>
+                Comments {{post.commentCount}}
+            </a>
+            <button (click)="goToPost(post.id)" class="loginButton">
+                Read post
+            </button>
         </div>
     </div>
 </div>
