--- a/src/js/app/component/shared/vote-button/vote-button.component.html
+++ b/src/js/app/component/shared/vote-button/vote-button.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-1">
+<div class="col-md-1 p-1">
     <div class="d-flex flex-column votebox">
         <div class="p-2">
             <fa-icon (click)="upVotePost()"
