--- a/src/js/app/page/home/home.component.html
+++ b/src/js/app/page/home/home.component.html
@@ -3,7 +3,11 @@
         <div class="row">
             <hr/>
             <div class="col-md-9">
-                <app-post-tile [posts]="posts"></app-post-tile>
+                <div *ngIf="loadingPost; else loadingTemp">
+                    <div *ngFor="let post of posts">
+                        <app-post-tile [post]="post"></app-post-tile>
+                    </div>
+                </div>
             </div>
             <div class="col-md-3">
                 <app-side-bar></app-side-bar>
@@ -12,3 +16,8 @@
         </div>
     </div>
 </div>
+
+
+<ng-template #loadingTemp>
+    <div class="loader-small"></div>
+</ng-template>
