--- a/src/js/app/page/post/user-view-post/user-view-post.component.html
+++ b/src/js/app/page/post/user-view-post/user-view-post.component.html
@@ -1,16 +1,11 @@
 <div class="container pt-5">
-    <h5 *ngIf="loadingSub; else loadingTemp">
-        Sub name: {{sub.name}}<br/>description: {{sub.description}}
-    </h5>
-
     <div *ngIf="loadingPost; else loadingTemp">
+        <h5>User name: {{name}}<br/>number of posts: {{postLength}}</h5>
         <div *ngFor="let post of posts">
             <app-post-tile [post]="post"></app-post-tile>
         </div>
     </div>
-
 </div>
-
 
 <ng-template #loadingTemp>
     <div class="loader-small"></div>
