--- a/src/js/app/page/post/view-post/view-post.component.html
+++ b/src/js/app/page/post/view-post/view-post.component.html
@@ -7,21 +7,23 @@
                     <app-vote-button [post]="this.post"></app-vote-button>
                 </div>
                 <div class="col-md-11">
-                    <div class="d-flex justify-content-between">
-                        <div class="subreddit-text"><a class="post-url" routerLink="">sub: {{post.subReadName}}-------</a></div>
-                        <div>Posted by <a class="username" routerLink="/user/{{post.userName}}">nik: {{post.userName}}</a></div>
-                        <div>{{post.duration | date:'H:m yyyy.MMM.d'}}</div>
-                    </div>
+                    <app-post-top [post]="post"></app-post-top>
                     <hr/>
-                    <h4>{{post.postName}}</h4>
-                    <div>
-                        <p [innerHtml]="post.description" class="post-text"></p>
+
+                    <div class="post-text text-center p-1" style="width: 35vw;">Title: {{post.postName}}
                     </div>
+
+                    <br/>
+                    <div class="p-5">
+                        <quill-view-html [content]="post.description"></quill-view-html>
+                    </div>
+                    <br/>
+
                     <div class="post-comment">
                         <form (ngSubmit)="postComment()" [formGroup]="commentForm">
                             <div class="form-group">
                                 <textarea [formControlName]="'text'" class="form-control"
-                                          placeholder="Your Thoughts?"></textarea>
+                                          placeholder="Your thoughts?"></textarea>
                             </div>
                             <button
                                     class="loginButton float-right"
@@ -32,11 +34,13 @@
                         </form>
                     </div>
 
+                    <hr/>
+
                     <div *ngIf="loadingComment; else loadingC">
                         <div *ngFor="let comment of comments">
                             <div class="comment">
                                 <div class="username">
-                                    <a routerLink="/user/comment.username">{{comment.username}}</a>
+                                    <a routerLink="/user/">{{comment.username}}</a>
                                 </div>
                                 <div>
                                     <p>{{comment.duration}}</p>
