--- a/src/js/app/page/subreddit/list-subreddits/list-subreddits.component.html
+++ b/src/js/app/page/subreddit/list-subreddits/list-subreddits.component.html
@@ -2,10 +2,10 @@
     <div class="row">
         <hr/>
         <div class="col-md-9">
-            <h2>List of Subreddits</h2>
+            <h2>List of sub</h2>
             <ul>
-                <li *ngFor="let subreddit of subreddits">
-                    <a routerLink="/view-subreddit/{{subreddit.id}}">{{subreddit.name}}</a>
+                <li *ngFor="let s of subreddits">
+                    <a routerLink="/view-subreddit/{{s.id}}">{{s.name}}</a>
                 </li>
             </ul>
         </div>
