add unit auth service test 24

--- a/src/js/app/page/auth/user-profile/user-profile.component.html
+++ b/src/js/app/page/auth/user-profile/user-profile.component.html
@@ -1,7 +1,7 @@
 <div class="container pt-5">
     <div class="pt-3 ">
-        Welcome <b>{{name}}</b>.<br/> You have posted <b>{{postLength}}</b> time(s) and commented
-        <b>{{commentLength}}</b> time(s).
+        Welcome <strong>{{name}}</strong>.<br/> You have posted <strong>{{postLength}}</strong> time(s) and commented
+        <strong>{{commentLength}}</strong> time(s).
         You can check your post and comment history below.
     </div>
     <hr/>
@@ -28,7 +28,7 @@
                 <div>
                     <p>{{comment.duration}}</p>
                 </div>
-                <b>{{comment.text}}</b>
+                <strong>{{comment.text}}</strong>
             </div>
             <hr/>
         </div>
