--- a/src/js/app/page/post/view-post/view-post.component.html
+++ b/src/js/app/page/post/view-post/view-post.component.html
@@ -46,7 +46,7 @@
                                 <div>
                                     <p>{{comment.duration}}</p>
                                 </div>
-                                <b>{{comment.text}}</b>
+                                <strong>{{comment.text}}</strong>
                             </div>
                             <hr/>
                         </div>
